--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -6,25 +6,8 @@ $myPrimary: mat-palette($mat-pink, A400);
 $myAccent:  mat-palette($mat-teal, 400);
 // The warn palette is optional (defaults to red).
 $myWarn: mat-palette($mat-red);
-$myForeground: (
-base:              black,
-divider:           $dark-dividers,
-dividers:          $dark-dividers,
-disabled:          $dark-disabled-text,
-disabled-button:   rgba(black, 0.26),
-disabled-text:     $dark-disabled-text,
-hint-text:         $dark-disabled-text, 
-// secondary-text:    mat-color($mat-pink, 300),
-secondary-text:    $dark-secondary-text,
-icon:              rgba(black, 0.54),
-icons:             rgba(black, 0.54),
-text:              mat-color($mat-pink, A200),
-slider-min:        rgba(black, 0.87),
-slider-off:        rgba(black, 0.26),
-slider-off-active: rgba(black, 0.38),
-);
 
-$myTheme: mat-light-theme($myPrimary, $myAccent, $myWarn, $myForeground); 
+$myTheme: mat-light-theme($myPrimary, $myAccent, $myWarn); 
 @include angular-material-theme($myTheme);
 @include my_mat_card;
 // @import 'button';
