--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -22,3 +22,4 @@
         <br><a routerLink="/SignUp">S'inscrire </a> 
     </mat-card>    
 </ng-template>   
+<button mat-raised-button (click)='test()'>Test Java</button>
